--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,13 @@ repository = "https://github.com/rust-av/av-scenechange"
 y4m = "0.5.0"
 num-traits = "0.2.9"
 clap = { version = "2.33.0", optional = true }
-serde = { version = "1.0.102", optional = true }
+serde = { version = "1.0.102", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.41", optional = true }
 
 [features]
 default = ["binary"]
-binary = ["clap", "serde", "serde_json"]
+binary = ["clap", "serialize"]
+serialize = ["serde", "serde_json"]
 
 [[bin]]
 name = "av-scenechange"
