--- a/.github/workflows/av-scenechange.yml
+++ b/.github/workflows/av-scenechange.yml
@@ -28,9 +28,9 @@ jobs:
     - name: Install nasm
       env:
         LINK: http://debian-archive.trafficmanager.net/debian/pool/main/n/nasm
-        NASM_VERSION: 2.14.02-1
+        NASM_VERSION: 2.15.02-1+b1
         NASM_SHA256: >-
-          5225d0654783134ae616f56ce8649e4df09cba191d612a0300cfd0494bb5a3ef
+          b454c064732c046ba025b82549833b3892ce85f2812d3addb8cbb06c6a47da8e
       run: |
         curl -O "$LINK/nasm_${NASM_VERSION}_amd64.deb"
         echo "$NASM_SHA256 nasm_${NASM_VERSION}_amd64.deb" | sha256sum --check
@@ -77,9 +77,9 @@ jobs:
       if: matrix.platform == 'ubuntu-latest'
       env:
         LINK: http://debian-archive.trafficmanager.net/debian/pool/main/n/nasm
-        NASM_VERSION: 2.14.02-1
+        NASM_VERSION: 2.15.02-1+b1
         NASM_SHA256: >-
-          5225d0654783134ae616f56ce8649e4df09cba191d612a0300cfd0494bb5a3ef
+          b454c064732c046ba025b82549833b3892ce85f2812d3addb8cbb06c6a47da8e
       run: |
         curl -O "$LINK/nasm_${NASM_VERSION}_amd64.deb"
         echo "$NASM_SHA256 nasm_${NASM_VERSION}_amd64.deb" | sha256sum --check
@@ -88,7 +88,7 @@ jobs:
     - name: Install nasm for Windows
       if: matrix.platform == 'windows-latest'
       run: |
-        $NASM_VERSION="2.14.02"
+        $NASM_VERSION="2.15.02"
         $LINK="https://www.nasm.us/pub/nasm/releasebuilds/$NASM_VERSION/win64"
         curl -LO "$LINK/nasm-$NASM_VERSION-win64.zip"
         7z e -y "nasm-$NASM_VERSION-win64.zip" -o"C:\nasm"
