--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,21 +6,14 @@ edition = "2018"
 description = "Estimates frames in a video where a scenecut would be ideal"
 license = "MIT"
 repository = "https://github.com/rust-av/av-scenechange"
-build = "build.rs"
 
 [dependencies]
 y4m = "0.7.0"
-num-traits = "0.2.14"
 clap = { version = "2.33.3", optional = true }
 serde = { version = "1.0.117", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.59", optional = true }
-libc = "0.2.80"
-paste = "1.0.3"
-arrayvec = "0.5"
-v_frame = "0.1"
-
-[build-dependencies]
-nasm-rs = "0.2.0"
+# TODO: Use upstream once rav1e 0.4 is released
+rav1e = { git = "https://github.com/xiph/rav1e", default-features = false, features = ["asm", "scenechange"] }
 
 [features]
 default = ["binary"]
