--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "av-scenechange"
-version = "0.6.0"
+version = "0.7.0"
 authors = ["Josh Holmer <jholmer.in@gmail.com>"]
 edition = "2018"
 description = "Estimates frames in a video where a scenecut would be ideal"
@@ -12,7 +12,7 @@ y4m = "0.7.0"
 clap = { version = "2.33.3", optional = true }
 serde = { version = "1.0.123", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.62", optional = true }
-rav1e = { version = "0.5.0-beta", default-features = false, features = ["asm", "scenechange"] }
+rav1e = { version = "0.5.0-beta.2", default-features = false, features = ["asm", "scenechange"] }
 
 
 [features]
