--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,15 @@ clap = { version = "2.33.3", optional = true }
 serde = { version = "1.0.123", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.62", optional = true }
 rav1e = { version = "0.5.0-beta.2", default-features = false, features = ["asm", "scenechange"] }
-
+log = { version = "0.4.14", optional = true }
+console = { version = "0.14", optional = true }
+fern = { version = "0.6", optional = true }
 
 [features]
 default = ["binary"]
 binary = ["clap", "serialize"]
 serialize = ["serde", "serde_json"]
+devel = ["log", "console", "fern"]
 
 [[bin]]
 name = "av-scenechange"
