--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ y4m = "0.7.0"
 clap = { version = "2.33.3", optional = true }
 serde = { version = "1.0.123", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.62", optional = true }
-rav1e = { version = "0.5.0-beta.2", default-features = false, features = ["asm", "scenechange"] }
+rav1e = { version = "0.5.0", default-features = false, features = ["asm", "scenechange"] }
 log = { version = "0.4.14", optional = true }
 console = { version = "0.14", optional = true }
 fern = { version = "0.6", optional = true }
@@ -29,6 +29,3 @@ tracing = ["rust_hawktracer/profiling_enabled"]
 name = "av-scenechange"
 path = "src/main.rs"
 required-features = ["binary"]
-
-[patch.crates-io]
-rav1e = { git = "https://github.com/xiph/rav1e" }
