--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ y4m = "0.7.0"
 clap = { version = "3.1.6", optional = true }
 serde = { version = "1.0.123", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.62", optional = true }
-rav1e = { git = "https://github.com/xiph/rav1e", default-features = false, features = ["asm", "scenechange"] }
+rav1e = { git = "https://github.com/xiph/rav1e", default-features = false, features = ["asm", "scenechange", "threading"] }
 log = { version = "0.4.14", optional = true }
 console = { version = "0.15", optional = true }
 fern = { version = "0.6", optional = true }
