--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "av-scenechange"
-version = "0.8.0"
+version = "0.8.1"
 authors = ["Josh Holmer <jholmer.in@gmail.com>"]
 edition = "2021"
 description = "Estimates frames in a video where a scenecut would be ideal"
@@ -13,7 +13,7 @@ y4m = "0.7.0"
 clap = { version = "4.0.22", optional = true, features = ["derive"] }
 serde = { version = "1.0.123", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.62", optional = true }
-rav1e = { git = "https://github.com/xiph/rav1e", default-features = false, features = [
+rav1e = { version = "0.6.1", default-features = false, features = [
     "asm",
     "scenechange",
     "threading",
