Replace the toolchain action

--- a/.github/workflows/av-scenechange.yml
+++ b/.github/workflows/av-scenechange.yml
@@ -18,11 +18,8 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install stable
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@stable
       with:
-        profile: minimal
-        toolchain: stable
-        override: true
         components: clippy, rustfmt
 
     - name: Install nasm
@@ -67,11 +64,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install stable
-      uses: actions-rs/toolchain@v1
-      with:
-        profile: minimal
-        toolchain: stable
-        override: true
+      uses: dtolnay/rust-toolchain@stable
 
     - name: Install nasm for Ubuntu
       if: matrix.platform == 'ubuntu-latest'
