Add Vapoursynth decoding support to allow for avoiding piping

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ clap = { version = "4.0.22", optional = true, features = ["derive"] }
 serde = { version = "1.0.123", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.62", optional = true }
 rav1e = { version = "0.7.0", default-features = false, features = [
-    "asm",
-    "scenechange",
-    "threading",
+  "asm",
+  "scenechange",
+  "threading",
 ] }
 log = { version = "0.4.14", optional = true }
 console = { version = "0.15", optional = true }
@@ -24,6 +24,16 @@ fern = { version = "0.6", optional = true }
 tracing-subscriber = { version = "0.3.18", optional = true }
 tracing-chrome = { version = "0.7.1", optional = true }
 tracing = { version = "0.1.40", optional = true }
+
+[dependencies.vapoursynth]
+version = "0.4.0"
+features = [
+  "vsscript-functions",
+  "vapoursynth-functions",
+  "vapoursynth-api-32",
+  "vsscript-api-31",
+]
+optional = true
 
 [features]
 default = ["binary"]
@@ -34,7 +44,7 @@ tracing = [
   "tracing-subscriber",
   "tracing-chrome",
   "dep:tracing",
-  "rav1e/tracing"
+  "rav1e/tracing",
 ]
 
 [[bin]]
