--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "av-scenechange"
-version = "0.11.0"
+version = "0.12.0"
 authors = ["Josh Holmer <jholmer.in@gmail.com>"]
 edition = "2021"
 description = "Estimates frames in a video where a scenecut would be ideal"
@@ -24,6 +24,10 @@ fern = { version = "0.6", optional = true }
 tracing-subscriber = { version = "0.3.18", optional = true }
 tracing-chrome = { version = "0.7.1", optional = true }
 tracing = { version = "0.1.40", optional = true }
+ffmpeg-the-third = { version = "2.0.1", optional = true, default-features = false, features = [
+  "codec",
+  "format",
+] }
 
 [dependencies.vapoursynth]
 version = "0.4.0"
@@ -34,6 +38,7 @@ features = [
   "vsscript-api-31",
 ]
 optional = true
+
 
 [features]
 default = ["binary"]
@@ -46,6 +51,7 @@ tracing = [
   "dep:tracing",
   "rav1e/tracing",
 ]
+ffmpeg = ["ffmpeg-the-third"]
 
 [[bin]]
 name = "av-scenechange"
