--- a/.github/workflows/av-scenechange.yml
+++ b/.github/workflows/av-scenechange.yml
@@ -14,22 +14,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: ilammy/setup-nasm@v1
 
       - name: Install stable
         uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy, rustfmt
-
-      - name: Install nasm
-        env:
-          LINK: http://debian-archive.trafficmanager.net/debian/pool/main/n/nasm
-          NASM_VERSION: 2.15.05-1
-          NASM_SHA256: >-
-            c860caec653b865d5b83359452d97b11f1b3ba5b18b07cac554cf72550b3bfc9
-        run: |
-          curl -O "$LINK/nasm_${NASM_VERSION}_amd64.deb"
-          echo "$NASM_SHA256 nasm_${NASM_VERSION}_amd64.deb" | sha256sum --check
-          sudo dpkg -i "nasm_${NASM_VERSION}_amd64.deb"
 
       - name: Run rustfmt
         run: |
@@ -43,12 +33,13 @@ jobs:
   build:
     strategy:
       matrix:
-        platform: [ubuntu-latest, windows-latest]
+        platform: [ ubuntu-latest, windows-latest ]
 
     runs-on: ${{ matrix.platform }}
 
     steps:
       - uses: actions/checkout@v4
+      - uses: ilammy/setup-nasm@v1
 
       - name: Install stable
         uses: dtolnay/rust-toolchain@stable
@@ -91,3 +82,18 @@ jobs:
 
       - name: Generate docs
         run: cargo doc --features binary,devel,tracing,serialize --no-deps
+
+      - name: Install cargo-llvm-cov
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-llvm-cov
+
+      - name: Generate code coverage
+        run: cargo llvm-cov --features binary,tracing,serialize --lcov --output-path lcov.log --ignore-filename-regex tests\.rs
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: lcov.log
+          fail_ci_if_error: false
