--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,4 +1,3 @@
-edition = "2021"
 use_field_init_shorthand = true
 use_try_shorthand = true
 
@@ -16,3 +15,4 @@ overflow_delimited_expr = true
 reorder_impl_items = true
 wrap_comments = true
 format_code_in_doc_comments = true
+empty_item_single_line = false
