--- a/.github/workflows/av-scenechange.yml
+++ b/.github/workflows/av-scenechange.yml
@@ -9,31 +9,26 @@ on:
       - master
 
 jobs:
-  clippy-rustfmt:
+  rustfmt:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
-      - uses: ilammy/setup-nasm@v1
 
-      - name: Install stable
-        uses: dtolnay/rust-toolchain@stable
+      - name: Install nightly
+        uses: dtolnay/rust-toolchain@nightly
         with:
-          components: clippy, rustfmt
+          components: rustfmt
 
       - name: Run rustfmt
         run: |
-          cargo fmt -- --check --verbose
-
-      - name: Run clippy
-        uses: clechasseur/rs-clippy-check@v3
-        with:
-          args: -- -D warnings --verbose -A clippy::wrong-self-convention -A clippy::many_single_char_names -A clippy::upper-case-acronyms
+          cargo fmt -- --check
 
   build:
+    needs: [rustfmt]
     strategy:
       matrix:
-        platform: [ ubuntu-latest, windows-latest ]
+        platform: [ubuntu-latest, windows-latest, ubuntu-24.04-arm]
 
     runs-on: ${{ matrix.platform }}
 
@@ -43,27 +38,9 @@ jobs:
 
       - name: Install stable
         uses: dtolnay/rust-toolchain@stable
-
-      - name: Install nasm for Ubuntu
-        if: matrix.platform == 'ubuntu-latest'
-        env:
-          LINK: http://debian-archive.trafficmanager.net/debian/pool/main/n/nasm
-          NASM_VERSION: 2.15.05-1
-          NASM_SHA256: >-
-            c860caec653b865d5b83359452d97b11f1b3ba5b18b07cac554cf72550b3bfc9
-        run: |
-          curl -O "$LINK/nasm_${NASM_VERSION}_amd64.deb"
-          echo "$NASM_SHA256 nasm_${NASM_VERSION}_amd64.deb" | sha256sum --check
-          sudo dpkg -i "nasm_${NASM_VERSION}_amd64.deb"
-
-      - name: Install nasm for Windows
-        if: matrix.platform == 'windows-latest'
-        run: |
-          $NASM_VERSION="2.15.05"
-          $LINK="https://www.nasm.us/pub/nasm/releasebuilds/$NASM_VERSION/win64"
-          curl -LO "$LINK/nasm-$NASM_VERSION-win64.zip"
-          7z e -y "nasm-$NASM_VERSION-win64.zip" -o"C:\nasm"
-          echo "C:\nasm" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        with:
+          components: clippy
+      - uses: Swatinem/rust-cache@v2
 
       - name: Set MSVC x86_64 linker path
         if: matrix.platform == 'windows-latest'
@@ -74,6 +51,9 @@ jobs:
                       Select-Object -Last 1
           echo "$LinkPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
+      - name: Clippy
+        run: cargo clippy --features binary,devel,tracing,serialize --tests --benches -D warnings
+
       - name: Build
         run: cargo build --features binary,devel,tracing,serialize --tests --benches
 
@@ -82,6 +62,18 @@ jobs:
 
       - name: Generate docs
         run: cargo doc --features binary,devel,tracing,serialize --no-deps
+
+  code-coverage:
+    needs: [build]
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ilammy/setup-nasm@v1
+
+      - name: Install stable
+        uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
 
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@v2
