--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,52 +9,42 @@ repository = "https://github.com/rust-av/av-scenechange"
 build = "build.rs"
 
 [dependencies]
+aligned = "0.4.2"
 anyhow = "1.0.56"
-y4m = "0.8.0"
+arg_enum_proc_macro = "0.3.4"
+arrayvec = "0.7.6"
 clap = { version = "4.0.22", optional = true, features = ["derive"] }
-serde = { version = "1.0.123", optional = true, features = ["derive"] }
-serde_json = { version = "1.0.62", optional = true }
-log = { version = "0.4.14" }
 console = { version = "0.15", optional = true }
 fern = { version = "0.7", optional = true }
-tracing-subscriber = { version = "0.3.18", optional = true }
-tracing-chrome = { version = "0.7.1", optional = true }
-tracing = { version = "0.1.40", optional = true }
 ffmpeg-the-third = { version = "3.0.0", optional = true, default-features = false, features = [
     "codec",
     "format",
 ] }
-v_frame = "0.3.8"
-arg_enum_proc_macro = "0.3.4"
-rayon = "1.10.0"
-num-rational = { version = "0.4.2", default-features = false }
 libc = { version = "0.2.172", optional = true }
-thiserror = "2.0.12"
-paste = "1.0.15"
-arrayvec = "0.7.6"
-simd_helpers = "0.1.0"
+log = { version = "0.4.14" }
+num-rational = { version = "0.4.2", default-features = false }
 num-traits = "0.2.19"
-aligned = "0.4.2"
-
-[dependencies.vapoursynth]
-version = "0.4.0"
-features = [
+paste = "1.0.15"
+rayon = "1.10.0"
+serde = { version = "1.0.123", optional = true, features = ["derive"] }
+serde_json = { version = "1.0.62", optional = true }
+thiserror = "2.0.12"
+tracing = { version = "0.1.40", optional = true }
+tracing-chrome = { version = "0.7.1", optional = true }
+tracing-subscriber = { version = "0.3.18", optional = true }
+v_frame = "0.3.8"
+vapoursynth = { version = "0.4.0", features = [
     "vsscript-functions",
     "vapoursynth-functions",
     "vapoursynth-api-32",
     "vsscript-api-31",
-]
-optional = true
+], optional = true }
+y4m = "0.8.0"
 
-[build-dependencies.cc]
-version = "1.2.23"
-optional = true
-features = ["parallel"]
 
-[build-dependencies.nasm-rs]
-version = "0.3"
-optional = true
-features = ["parallel"]
+[build-dependencies]
+cc = { version = "1.2.23", optional = true, features = ["parallel"] }
+nasm-rs = { version = "0.3", optional = true, features = ["parallel"] }
 
 [features]
 default = ["binary", "asm"]
