Update for v_frame 0.4

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "av-scenechange"
-version = "0.20.0"
-authors = ["Josh Holmer <jholmer.in@gmail.com>"]
+version = "0.21.0"
 edition = "2024"
 rust-version = "1.86"
 description = "Estimates frames in a video where a scenecut would be ideal"
@@ -21,7 +20,7 @@ include = [
 aligned = "0.4.2"
 anyhow = "1.0.100"
 arrayvec = "0.7.6"
-av-decoders = "0.7.0"
+av-decoders = "0.8"
 cfg-if = "1.0.4"
 clap = { version = "4.5.53", optional = true, features = ["derive"] }
 console = { version = "0.16.1", optional = true }
@@ -31,6 +30,7 @@ libc = { version = "0.2.177", optional = true }
 log = { version = "0.4.28" }
 num-rational = { version = "0.4.2", default-features = false }
 num-traits = "0.2.19"
+pastey = "0.2.1"
 rayon = "1.11.0"
 serde = { version = "1.0.228", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.145", optional = true }
@@ -38,7 +38,7 @@ thiserror = "2.0.17"
 tracing = { version = "0.1.41", optional = true }
 tracing-chrome = { version = "0.7.2", optional = true }
 tracing-subscriber = { version = "0.3.20", optional = true }
-v_frame = "0.3.9"
+v_frame = { version = "0.4", features = ["padding_api"] }
 y4m = "0.8.0"
 
 [build-dependencies]
@@ -66,17 +66,128 @@ required-features = ["binary"]
 
 [lints.rust]
 missing_docs = "warn"
-unsafe_op_in_unsafe_fn = "allow"
 
 [lints.clippy]
+# Performance
+clear_with_drain = "warn"
+format_collect = "warn"
+format_push_string = "warn"
+imprecise_flops = "warn"
+inefficient_to_string = "warn"
+inline_always = "warn"
+iter_with_drain = "warn"
+large_include_file = "warn"
+large_types_passed_by_value = "warn"
+linkedlist = "deny"
+missing_inline_in_public_items = "warn"
+mutex_atomic = "warn"
+mutex_integer = "warn"
+naive_bytecount = "warn"
+needless_bitwise_bool = "warn"
+needless_collect = "warn"
+needless_pass_by_value = "warn"
+non_std_lazy_statics = "warn"
+non_zero_suggestions = "warn"
+or_fun_call = "warn"
+rc_buffer = "warn"
+redundant_clone = "warn"
+ref_option = "warn"
+set_contains_or_insert = "warn"
+stable_sort_primitive = "warn"
+string_lit_chars_any = "warn"
+suboptimal_flops = "warn"
+trivial_regex = "warn"
+trivially_copy_pass_by_ref = "warn"
+unnecessary_box_returns = "warn"
+unnecessary_join = "warn"
+unused_async = "warn"
+verbose_file_reads = "warn"
+# Readability/Code Intention
+checked_conversions = "warn"
+clone_on_ref_ptr = "warn"
+cloned_instead_of_copied = "warn"
+enum_glob_use = "warn"
+equatable_if_let = "warn"
+filter_map_next = "warn"
+flat_map_option = "warn"
+if_then_some_else_none = "warn"
+implicit_clone = "warn"
+inconsistent_struct_constructor = "warn"
+invalid_upcast_comparisons = "warn"
+iter_filter_is_ok = "warn"
+iter_filter_is_some = "warn"
+iter_on_empty_collections = "warn"
+iter_on_single_items = "warn"
+macro_use_imports = "warn"
+manual_assert = "warn"
+manual_instant_elapsed = "warn"
+manual_is_power_of_two = "warn"
+manual_is_variant_and = "warn"
+manual_let_else = "warn"
+manual_string_new = "warn"
+map_unwrap_or = "warn"
+map_with_unused_argument_over_ranges = "warn"
+match_bool = "warn"
+mod_module_files = "warn"
+needless_continue = "warn"
+needless_pass_by_ref_mut = "warn"
+option_as_ref_cloned = "warn"
+option_if_let_else = "warn"
+pathbuf_init_then_push = "warn"
+precedence_bits = "warn"
+range_minus_one = "warn"
+range_plus_one = "warn"
+redundant_test_prefix = "warn"
+ref_option_ref = "warn"
+semicolon_if_nothing_returned = "warn"
+tests_outside_test_module = "warn"
+transmute_ptr_to_ptr = "warn"
+unused_peekable = "warn"
+unused_rounding = "warn"
+verbose_bit_mask = "warn"
+zero_sized_map_values = "warn"
+# Correctness/Safety
+case_sensitive_file_extension_comparisons = "warn"
+cfg_not_test = "deny"
+collection_is_never_read = "warn"
+create_dir = "warn"
+dbg_macro = "warn"
+debug_assert_with_mut_call = "deny"
+expl_impl_clone_on_copy = "deny"
+filetype_is_file = "warn"
+future_not_send = "warn"
+ignore_without_reason = "warn"
+infinite_loop = "warn"
+large_futures = "warn"
+large_stack_arrays = "warn"
+large_stack_frames = "warn"
+manual_midpoint = "warn"
+maybe_infinite_iter = "warn"
+mem_forget = "warn"
+mismatching_type_param_order = "warn"
+mixed_read_write_in_expression = "warn"
+must_use_candidate = "warn"
+mut_mut = "warn"
+non_send_fields_in_send_ty = "deny"
+path_buf_push_overwrite = "warn"
+rc_mutex = "warn"
+read_zero_byte_vec = "warn"
+significant_drop_in_scrutinee = "deny"
+str_split_at_newline = "warn"
+string_slice = "warn"
+suspicious_operation_groupings = "warn"
+suspicious_xor_used_as_pow = "warn"
+transmute_undefined_repr = "warn"
+undocumented_unsafe_blocks = "warn"
+unnecessary_debug_formatting = "warn"
+unwrap_used = "warn"
+# Documentation
 doc_link_with_quotes = "warn"
 doc_markdown = "warn"
-inline_always = "warn"
 missing_errors_doc = "warn"
-missing_inline_in_public_items = "warn"
-missing_panics_doc = "warn"
+missing_safety_doc = "warn"
+# Annoyances
 uninlined_format_args = "allow"
-
 
 [lints.rust.unexpected_cfgs]
 level = "warn"
