Update license expression to “MIT AND BSD-2-Clause AND ISC”
This reflects the fact that some assembly routines are not covered by
the primary MIT license.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Josh Holmer <jholmer.in@gmail.com>"]
 edition = "2024"
 rust-version = "1.86"
 description = "Estimates frames in a video where a scenecut would be ideal"
-license = "MIT"
+license = "MIT AND BSD-2-Clause AND ISC"
 repository = "https://github.com/rust-av/av-scenechange"
 build = "build.rs"
 include = [
