perf: add SSE2 for `sum_8x8_block`
This function in `estimate_importance_block_difference` was hot,
so this change vectorizes it using SSE2 intrinsics.

Although this does not impact overall runtime due to the threading model
(`estimate_importance_block_difference` is not the slowest thread),
it does improve the runtime of the `estimate_importance_block_difference`
function by 15%.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -197,3 +197,10 @@ missing_docs = "warn"
 level = "warn"
 # These custom cfgs are expected, so tell rustc not to output warnings for them
 check-cfg = ["cfg(asm_x86_64)", "cfg(asm_neon)"]
+
+[profile.dev]
+opt-level = 1
+
+[profile.relwithdebug]
+inherits = "release"
+debug = "full"
